# friend-lite

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README-K8S.md  README.md  config.env.template  docker-compose.yml  init.py  init.sh  quickstart.md  requirements.txt  run-test.sh  services.py  setup-requirements.txt  skaffold.env.template  skaffold.yaml  start.sh  stop.sh  wizard.py  wizard.sh
backend/: README.md  pyproject.toml
backend/examples/: streaming_vad.py
backend/examples/ai_server/: constants.py  log_taker.py  log_taker_on_wake_word.py  log_taker_whispers_vad.py  prompt_template.py  rag_server.py  retriever.py  utils.py
backend/examples/record/: just_record_clips.py  streaming_vad.py
backend/src/ez_wearable_backend/: helper.py  utils.py
backends/advanced/: .dockerignore  .env.template  .env.test  Caddyfile.template  Dockerfile  Dockerfile.blackwell  Dockerfile.k8s  Dockerfile.webui  README.md  SETUP_SCRIPTS.md  diarization_config.json.template  docker-compose-test.yml  docker-compose.yml  init-https.sh  init.py  init.sh  memory_config.yaml  memory_config.yaml.template  nginx.conf  nginx.conf.template  pyproject.blackwell.toml  pyproject.toml  run-test.sh  setup-https.sh  setup-requirements.txt  start-k8s.sh  start-workers.sh  start.sh  upload_files.py
backends/advanced-backend/: .dockerignore  .env.template  .env.test  AUTH_SETUP.md  Dockerfile  Dockerfile.blackwell  Dockerfile.webui  README.md  README_laptop_client.md  critical-fixes.md  docker-compose-test.yml  docker-compose.yml  enroll_speaker.py  laptop_client.py  main.py  memory_config.yaml  nginx.conf  pyproject.blackwell.toml  pyproject.toml  run_with_deepgram.sh  speaker_client.py  speaker_recognition.py  start_asr.sh  start_backend.sh  upload_files.py
backends/advanced-backend/Docs/: README.md  README_speaker_enrollment.md  UI.md  action-items.md  architecture.md  auth.md  contribution.md  failure-recovery.md  memories.md  memory-configuration-guide.md  quickstart.md  system-tracker.md
backends/advanced-backend/scripts/: enroll_speaker.py  laptop_client.py
backends/advanced-backend/speaker_recognition/: __init__.py  speaker_recognition.py
backends/advanced-backend/src/: action_items_service.py  api_routes.py  audio_processing.py  auth.py  conversation_manager.py  database.py  deps.py  enroll_speaker_service.py  laptop_client.py  main.py  memory_config_loader.py  memory_debug.py  memory_debug_api.py  metrics.py  models.py  service_interface.py  services.py  users.py  websocket_handler.py
backends/advanced-backend/tests/: test_audio_cropping.py  test_integration.py  test_memory_service.py  test_memory_service_fixed.py
backends/advanced-backend/utils/: mem0_client.py
backends/advanced-backend/webui/: .dockerignore  Dockerfile  pyproject.toml  streamlit_app.py
backends/advanced/Docs/: HTTPS_SETUP.md  README.md  README_speaker_enrollment.md  UI.md  architecture.excalidraw  architecture.md  auth.md  elevenlabs-integration.md  flowdiagram.excalidraw  memories.md  memory-configuration-guide.md  quickstart.md
backends/advanced/notebooks/: README.md  debugmemory.ipynb  fact - deepseek r1 fail.ipynb  fact - mistral 7b instruct.ipynb  langfuse test.ipynb  llm provider test.ipynb  memory update - mistral 7b instruct.ipynb
backends/advanced/scripts/: delete_all_conversations_api.py  laptop_client.py
backends/advanced/ssl/: generate-ssl.sh
backends/advanced/tests/: test_conversation_models.py  test_integration.py  test_openmemory_integration.py
backends/advanced/webui/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
backends/examples/advanced-backend/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backends/examples/asr-parakeet/: .dockerignore  Dockerfile  Dockerfile_Moonshine  Dockerfile_Parakeet  client.py  docker-compose.yml  main.py  moonshine-1.py  moonshine-2.py  moonshine-online.py  online-4.py  online-5.py  parakeet-offline.py  pyproject.toml
extras/asr-services/: .dockerignore  .env.template  Dockerfile_Moonshine  Dockerfile_Parakeet  Dockerfile_Parakeet.blackwell  README.md  client.py  docker-compose-test.yml  docker-compose.yml  enhanced_chunking.py  env.template  moonshine-online.py  parakeet-offline.py  pyproject.blackwell.toml  pyproject.toml  quickstart.md  setup.sh
extras/asr-services/tests/: test_parakeet_service.py
extras/havpe-relay/: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  voice-quality.md  voice_pe_audio_processor.py
extras/havpe-relay/firmware/: tcp_stream.h  voice-pe.yaml
extras/speaker-omni-experimental/: README.md  config.yaml  data_preparation.py  pyproject.toml  qwen_speaker_diarizer.py  research
extras/speaker-recognition/: .dockerignore  .env.template  Dockerfile  Dockerfile-gtx1070  Dockerfile-k8s  Dockerfile.blackwell  README.detailed.md  README.md  client.py  docker-compose-test.yml  docker-compose.yml  init.py  init.sh  laptop_client.py  nginx.conf.template  pyproject.blackwell.toml  pyproject.toml  quickstart.md  run-test.sh  sample-voice-response-alt.json  sample-voice-response.json  setup-requirements.txt  setup.sh  sortformer.py  speaker-recognition.md  speaker_service.py
extras/speaker-recognition/charts/: Chart.yaml  SHARED-MODELS.md  values.yaml
extras/speaker-recognition/pages/: 2_annotation.py  6_inference.py
extras/speaker-recognition/scripts/: diarization_service.py  download-pyannote.py  enroll.py  enroll_from_backup.py  enroll_speaker.py  extract_speaker_from_plots.py  install-pytorch.py  live_stream_with_speakerids.py  simple_enroll.py  test_diarize.py  test_workflow.py  youtube_cli.py
extras/speaker-recognition/ssl/: generate-ssl.sh
extras/speaker-recognition/tests/: test_speaker_service_integration.py
extras/speaker-recognition/utils/: transcript_processor.py  visualization.py  youtube_transcriber.py
extras/speaker-recognition/webui/: .dockerignore  Dockerfile  README.md  healthcheck.sh  index.html  package.json  (+2 more)
(+574 files in other folders)
