[tool.poetry]
name = "ez-wearable-backend"
version = "0.1.0"
description = ""
authors = ["Ankush Malaker <43288948+AnkushMalaker@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
websockets = "^13.1"
mem0ai = "^0.1.16"
opuslib = "^3.0.1"
faster-whisper = "^1.0.3"
openwakeword = "^0.6.0"
torch = "^2.4.0"
torchaudio = "^2.4.0"
silero-vad = "^5.1"
mosestokenizer = "^1.2.1"

pydantic = "^2.9.2"
pvporcupine = "^3.0.3"
litserve = "^0.2.3"
vllm = "^0.6.2"
pypdf2 = "^3.0.1"
fastembed = "^0.3.6"
peft = "^0.13.1"
evaluate = "^0.4.3"
soundfile = "^0.12.1"
easy-audio-interfaces = { git = "git@github.com:AnkushMalaker/python-audio-interfaces.git" }
# easy-audio-interfaces = { path = "/home/ginger/Projects/voice-agent/voice-interfaces/python/attempt2", develop = true }
# poetry add git+ssh://git@github.com:AnkushMalaker/python-audio-interfaces.git

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.mypy.overrides]]
module = "opuslib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "faster_whisper"
ignore_missing_imports = true

[tool.poetry.scripts]
start-backend = "ez_wearable_backend.main:run"
