[project]
name = "simple-omi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easy-audio-interfaces[local-audio]",
    "fastapi>=0.115.12",
    "mem0ai>=0.1.97",
    "motor>=3.7.1",
    "ollama>=0.4.8",
    "omi-sdk>=0.1.5",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "wyoming>=1.6.1",
]

[dependency-groups]
deepgram = [
    "deepgram-sdk>=4.0.0",
]
dev = [
    "black>=25.1.0",
]
webui = [
    "streamlit>=1.45.1",
]

[tool.uv.sources]
easy-audio-interfaces = { git = "https://github.com/AnkushMalaker/python-audio-interfaces.git", branch="upgrade-to-wyoming" }
