[project]
name = "advanced-omi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easy-audio-interfaces>=0.2.6",
    "fastapi>=0.115.12",
    "mem0ai>=0.1.97",
    "motor>=3.7.1",
    "ollama>=0.4.8",
    "omi-sdk>=0.1.5",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "wyoming>=1.6.1",
]

[tool.setuptools.packages.find]
packages = ["speaker_recognition"]

[dependency-groups]
deepgram = [
    "deepgram-sdk>=4.0.0",
]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
webui = [
    "streamlit>=1.45.1",
]
speaker = [
    # core pyannote stack
    "pyannote.audio>=3.3.2",
    # fast nearest-neighbor search for verification
    "faiss-cpu>=1.8",  # or faiss-cpu if no GPU
    "torch>=2.0.0",
    # additional dependencies needed
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[tool.isort]
profile = "black"