[project]
name = "asr-services"
version = "0.1.0"
description = "Wyoming compatible WebSocket ASR server for friend-lite"
requires-python = ">=3.10"

dependencies = [
  "websockets>=12.0",
  "numpy>=1.26",
  "soundfile>=0.12",
  "fastapi>=0.115.12",
  "uvicorn>=0.34.2",
  "python-multipart>=0.0.6",
  "silero-vad>=5.1.2",
  "wyoming>=1.7.0",
  "easy-audio-interfaces>=0.7.1",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
local-audio = [
    "easy-audio-interfaces[local-audio]>=0.7.1",
]

cu121 = [
  "torch>=2.3",
  "torchaudio>=2.3",
]

cu126 = [
  "torch>=2.3",
  "torchaudio>=2.3",
]

cu128 = [
  "torch>=2.3",
  "torchaudio>=2.3",
]

[tool.uv]
compile-bytecode = true
conflicts = [
  [
    { group = "demo" },
    { group = "parakeet" }
  ],
  [
    { extra = "cu121" },
    { extra = "cu126" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
useful-moonshine-onnx = { git = "https://github.com/usefulsensors/moonshine.git", subdirectory = "moonshine-onnx" }
torch = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
demo = [
    "fastrtc>=0.0.23",
    "gradio>=5.29.0",
    "sounddevice>=0.5.1",
]

dev = [
    "black>=25.1.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
]

moonshine = [
  "useful-moonshine-onnx",
]

parakeet = [
    "nemo-toolkit[asr]>=2.2.0",
    "cuda-python>=12.3",
    "numpy>=1.26,<2.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
