[project]
name = "havpe-relay"
version = "0.1.0"
description = "TCP-to-WebSocket relay for ESPHome Voice-PE that connects to the Omi advanced backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easy-audio-interfaces>=0.5",
    "httpx>=0.27.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
