[project]
name = "speaker-recognition-service"
version = "0.1.0"
description = "Speaker recognition and diarization service for friend-lite"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "numpy>=1.26",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pyannote.audio>=3.3.2",
    "faiss-cpu>=1.8",
    "aiohttp>=3.8.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "soundfile>=0.12",
    "easy-audio-interfaces[local-audio]>=0.5.1",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
cpu = ["faiss-cpu>=1.8"]
gpu = ["faiss-gpu>=1.7"]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.uv]
# dev & cpu are installed automatically
default-groups = ["dev", "cpu"]
# cpu and gpu can never coexist
conflicts = [
    [
        { group = "cpu" },
        { group = "gpu" },
    ],
]
[tool.isort]
profile = "black" 
