[project]
name = "simple-speaker-recognition"
version = "0.1.0"
description = "Speaker recognition and diarization service for friend-lite"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "numpy>=1.26,<2",
    "scipy>=1.10.0",
    "pyannote.audio>=3.3.2",
    "aiohttp>=3.8.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "soundfile>=0.12",
    "easy-audio-interfaces>=0.7.1",
    "pydantic-settings>=2.10.1",
    "deepgram-sdk>=4.7.0",
    "pydub>=0.25.1",
    "yt-dlp>=2025.7.21",
    "websockets>=12.0",
    # Audio processing and visualization
    "librosa>=0.10.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Data processing
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0", # For t-SNE/UMAP visualization
    "umap-learn>=0.5.3",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
local-audio = [
    "easy-audio-interfaces[local-audio]>=0.7.1",
]

[project.scripts]
simple-speaker-service = "simple_speaker_recognition.api.service:main"
simple-speaker-web = "simple_speaker_recognition.web.app:main"

[dependency-groups]
cpu = [
    "faiss-cpu>=1.8",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
gpu = [
    "faiss-cpu>=1.8",  # Use CPU FAISS for compatibility, GPU PyTorch for performance
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

test = [
    "pytest",
    "requests",  # For integration tests
]

[tool.uv]
# dev & cpu are installed automatically
default-groups = ["dev", "cpu"]
# cpu and gpu can never coexist
conflicts = [
    [
        { group = "cpu" },
        { group = "gpu" },
    ],
]
[tool.isort]
profile = "black" 
